# openworker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
coworker/: agent.py  attachments.py  audit.py  catalog.py  cli.py  cloud.py  config.py  connections.py  conversations.py  engine.py  environment.py  events.py  inbox.py  inbox_routing.py  interactions.py  local_state.py  mentions.py  overrides.py  pdf_support.py  permissions.py  risk.py  secrets.py  selfwake.py  sessions.py  subscriptions.py  tool_outputs.py  unattended.py  unrouted.py
coworker/agents/: base.py  code.py  cowork.py  myhelper.py  registry.py
coworker/automation/: models.py  scheduler.py  store.py  tools.py
coworker/connectors/: __init__.py  accounts.py  adapters.py  attribution.py  base.py  browser_automation.py  catalog_copy.py  cli.py  config.py  descriptors.py  email_tools.py  gateway.py  gcal_accounts.py  github_installs.py  github_relay.py  gmail_accounts.py  hubspot_portals.py  integration_tools.py  obsidian_tools.py  parked.py  relay_client.py  senders.py  setup.py  slack_addr.py  slack_directory.py  tool_defs.py  tools.py
coworker/mcp/: client.py  config.py  oauth.py
coworker/memory/: base.py  sqlite_store.py  tools.py
coworker/personas/: __init__.py  loading.py  manifest.py  registry.py
coworker/providers/: __init__.py  anthropic_provider.py  apple_foundation_provider.py  base.py  capabilities.py  errors.py  gemini_provider.py  matrix.py  openai_provider.py  registry.py  router.py
coworker/server/: app.py  manager.py  run.py
coworker/testing/: __init__.py
coworker/tools/: ask.py  files.py  plan.py  registry.py  search.py  shell.py  subagent.py  (+1 more)
docs/: CONNECTORS-BATCH2-SPEC.md  FAKE-SLACK-SPEC.md  GDOCS-SHEETS-SPEC.md  IMPLEMENTATION-LEDGER.md  MESSAGING-AND-SESSIONS.md  PERMISSIONS-AND-INBOX.md  PERSONAS.md  UI-REFRESH-KICKOFF.md  UI-REFRESH-SPEC.md  UI-REFRESH-VERIFICATION.md  UX-DECISIONS.md  config.example.toml
packaging/: build_appimage.sh  build_dmg.sh  build_windows.ps1  coworker-server.spec  dmg-background.tiff  make_update_manifest.py  openworker-server.spec  server_entry.py  setup_dev_env.sh
stt/: Cargo.toml
stt/src/: lib.rs
tests/: conftest.py  test_accounts.py  test_anthropic_provider.py  test_apple_foundation_provider.py  test_attachments.py  test_audit.py  test_automation.py  test_autotitle.py  test_browser_screenshot.py  test_builtin_personas.py  test_catalog.py  test_cloud.py  test_cloud_server.py  test_code_tools.py  test_config.py  test_connections.py  test_connector_registry.py  test_connectors.py  test_connectors_allowlist.py  test_conversation_atomicity.py  test_conversation_jsonl_robustness.py  test_conversation_store.py  test_dm_routing.py  test_durable_resume.py  test_engine.py  test_engine_stop.py  test_environment.py  test_fake_slack.py  test_gateway_inbox_reply.py  test_gcal_accounts.py  test_gemini_provider.py  test_github_installs.py  test_gmail_accounts.py  test_hubspot_portals.py  test_inbox.py  test_inbox_routing.py  test_interactions.py  test_make_update_manifest.py  test_mcp_connectors.py  test_mcp_oauth.py  (+45 more)
ui-mocks/: connectors-redesign.html  redesign.html  voice-input-composer-states.html  voice-input-settings.html
(+175 files in other folders)
